# BMICalculator

./: main.py  pyproject.toml  replit.nix
